Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
 + joop具备面向对象的基本特征:封装，多态，继承。
 </code></pre>
 
+<h3>支持</h3>
+
+<pre><code>+ 您可以发邮件到 admin@xhou.net
++ 或者访问 http://www.houfeng.net
+</code></pre>
+
 <h3>使用指南</h3>
 
 <h5>如何使用？</h5>
