--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <section id="main_content" class="inner">
         <h3>欢迎来到joop的世界</h3>
 
-<p>欢迎使用joop! joop是一个轻量简洁javascript的oop库</p>
+<p>欢迎使用joop! joop是一个轻量简洁的javascript oop库</p>
 
 <h3>简介</h3>
 
