Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="joop : 用更舒服且容易理解的方式编写面向对象的javascript代码！" />
+    <meta name="description" content="joop : 用更简单舒服的方式编写面向对象的javascript代码！" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/Houfeng/joop">View on GitHub</a>
 
           <h1 id="project_title">joop</h1>
-          <h2 id="project_tagline">用更舒服且容易理解的方式编写面向对象的javascript代码！</h2>
+          <h2 id="project_tagline">用更简单舒服的方式编写面向对象的javascript代码！</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/Houfeng/joop/zipball/master">Download this project as a .zip file</a>
@@ -33,12 +33,14 @@
       <section id="main_content" class="inner">
         <h3>欢迎来到joop的世界</h3>
 
-<p>欢迎使用joop! joop是一个轻量简洁的javascript oop库</p>
+<p>欢迎使用joop! 一个轻量简洁的javascript oop库
+joop说：要用更简单舒服的方式编写面向对象的javascript代码！</p>
 
 <h3>简介</h3>
 
-<pre><code>+ 用更容易理解的方式编写面向对象的javascript代码
+<pre><code>+ 用更容易理解的方式编写面向对象的javascript代码。
 + joop具备面向对象的基本特征:封装，多态，继承。
++ 更直观，方便的文件，模块管理方式。
 </code></pre>
 
 <h3>支持</h3>
@@ -107,7 +109,7 @@
 <span class="c1">//在demo.abc下定义Animal</span>
 <span class="nx">Animal</span><span class="o">:</span><span class="nx">$class</span><span class="p">({</span>
     <span class="nx">name</span><span class="o">:</span> <span class="s1">'animal'</span><span class="p">,</span>
-    <span class="c1">//构告函数</span>
+    <span class="c1">//构造函数</span>
     <span class="nx">$init</span><span class="o">:</span><span class="kd">function</span><span class="p">(</span><span class="nx">_name</span><span class="p">){</span>
         <span class="k">this</span><span class="p">.</span><span class="nx">name</span><span class="o">=</span><span class="nx">_name</span><span class="p">;</span>
     <span class="p">}</span>
