--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
       <section id="main_content" class="inner">
         <h3>欢迎来到joop的世界</h3>
 
-<p>欢迎使用joop! 一个轻量简洁的javascript oop库
-joop说：要用更简单舒服的方式编写面向对象的javascript代码！</p>
+<p>欢迎使用joop! 一个轻量简洁的javascript oop库</p>
+
+<blockquote>
+<p>joop说：要用更简单舒服的方式编写面向对象的javascript代码！</p>
+</blockquote>
 
 <h3>简介</h3>
 
@@ -47,6 +50,7 @@ joop说：要用更简单舒服的方式编写面向对象的javascript代码！
 
 <pre><code>+ 您可以发邮件到 admin@xhou.net
 + 或者访问 http://www.houfeng.net
++ 关注微博 http://weibo.com/houfeng
 </code></pre>
 
 <h3>使用指南</h3>
