Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <pre><code>+ 用更容易理解的方式编写面向对象的javascript代码。
 + joop具备面向对象的基本特征:封装，多态，继承。
-+ 更直观，方便的文件，模块管理方式。
++ 更直观方便的文件及模块管理方式。
 </code></pre>
 
 <h3>支持</h3>
