--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <h3>许可协议</h3>
 
 <blockquote>
-<p><a href="http://www.gnu.org/licenses/lgpl.html">使用jtp请您遵守LGPL协议，否则您将会被起诉。（点击可查看LGPL协议）</a></p>
+<p><a href="http://www.gnu.org/licenses/lgpl.html">使用joop请您遵守LGPL协议，否则您将会被起诉。（点击可查看LGPL协议）</a></p>
 </blockquote>
 
 <h3>支持</h3>
